<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:padding="5dp"
            android:text="@string/menu_cars"/>
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212121"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textAllCaps="true"
                    android:layout_marginBottom="2dp"
                    android:text="@string/symbols"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/tic_mast"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_mastery"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/tic_rnd"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_rnd"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/tic_champ"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_race"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/tic_edd"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_edd"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/tic_vip"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_vip"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/tic_mp"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_mp"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:background="#B4536DFE"
                        android:src="@drawable/pro_holder"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_elite"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:background="#B4F44336"
                        android:src="@drawable/pro_holder"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/car_champ"
                        android:textColor="#212121"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/menu_cmp"/>
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212121"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textAllCaps="true"
                    android:text="@string/display_format"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212121"
                    android:id="@+id/cmp_help"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F44336"
                    android:textAllCaps="true"
                    android:text="@string/real_speed"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
</LinearLayout>